# Advent-of-Code-2023

./: Cargo.toml
gleam/: gleam.toml  manifest.toml
gleam/src/days/: day01.gleam  day02.gleam  day04.gleam  day06.gleam  day08.gleam  day09.gleam  day12.gleam  day18.gleam
gleam/src/util/: import_util.gleam
gleam/test/: day12_test.gleam
src/: commons.rs  lib.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day15.rs  day16.rs  mod.rs
