[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc_2023_impl"
path = "src/lib.rs"
bench = true

[[bin]]
name = "aoc-2023"
path = "src/bin/main.rs"

[dependencies]
thiserror = "1.0"
itertools = "0.11.0"
lazy_static = "1.4.0"